# RayTracer

./: CMakeLists.txt  README.md  image.ppm  main.cpp  render.sh
headers/: camera.h  colour.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rt_weekend.h  shapes.h  sphere.h  vec3.h
